payment controller fixed